[tool.poetry]
name = "inflammation"
version = "0.2.0"
description = "analyse patient inflammation data"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
